# Gris.Assert

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
cmake/: standard_project_settings.cmake  test_compile_fail.cmake  test_compile_success.cmake
include/gris/: assert.h
src/gris/: assert.cpp
tests/: CMakeLists.txt  test_always_fast_no_slow.cpp  test_always_fast_slow.cpp  test_always_no_fast_no_slow.cpp  test_always_no_fast_slow.cpp  test_no_always_fast_no_slow.cpp  test_no_always_fast_slow.cpp  test_no_always_no_fast_no_slow.cpp  test_no_always_no_fast_slow.cpp
tests/compilation/: assert_tu_always.cpp  assert_tu_always_and_disable_always.cpp  assert_tu_defaults.cpp  assert_tu_disable_always.cpp  assert_tu_disable_fast.cpp  assert_tu_disable_fast_always.cpp  assert_tu_disable_fast_disable_always.cpp  assert_tu_disable_slow.cpp  assert_tu_disable_slow_always.cpp  assert_tu_disable_slow_disable_always.cpp  assert_tu_disable_slow_disable_fast.cpp  assert_tu_disable_slow_disable_fast_always.cpp  assert_tu_disable_slow_disable_fast_disable_always.cpp  assert_tu_disable_slow_fast.cpp  assert_tu_disable_slow_fast_always.cpp  assert_tu_disable_slow_fast_disable_always.cpp  assert_tu_fast.cpp  assert_tu_fast_always.cpp  assert_tu_fast_and_disable_fast.cpp  assert_tu_fast_disable_always.cpp  assert_tu_none.cpp  assert_tu_none_and_always.cpp  assert_tu_none_and_disable_always.cpp  assert_tu_none_and_disable_fast.cpp  assert_tu_none_and_disable_slow.cpp  assert_tu_none_and_fast.cpp  assert_tu_none_and_slow.cpp  assert_tu_slow.cpp  assert_tu_slow_always.cpp  assert_tu_slow_and_disable_slow.cpp  assert_tu_slow_disable_always.cpp  assert_tu_slow_disable_fast.cpp  assert_tu_slow_disable_fast_always.cpp  assert_tu_slow_disable_fast_disable_always.cpp  assert_tu_slow_fast.cpp  assert_tu_slow_fast_always.cpp  assert_tu_slow_fast_disable_always.cpp  expect_all.h  expect_always.h  expect_always_fast.h  (+5 more)
